--- a/index.html
+++ b/index.html
@@ -2,52 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gouri Mahapatra | AI Portfolio</title>
+  <title>Gouri Mahapatra | Data Engineer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <img src="your-photo.jpg" alt="Profile Photo" class="profile">
-  <h1>Gouri Mahapatra</h1>
-  <p>AI | Data Engineering | Azure | Databricks</p>
-</header>
-
-<section>
-  <h2>About Me</h2>
-  <p>
-    Passionate AI & Data Engineer focused on building intelligent data solutions 
-    using Azure, Databricks, and modern AI frameworks.
-  </p>
-</section>
-
-<section>
-  <h2>Articles</h2>
-  <div class="card">
-    <h3>Building Scalable Data Pipelines in Azure</h3>
-    <p>How to design enterprise-grade pipelines using Azure Data Factory & Databricks.</p>
+<div class="hero">
+  <div class="hero-content">
+    <img src="your-photo.jpg" alt="Profile Photo" class="profile">
+    <h1>Gouri Mahapatra</h1>
+    <h2>Data Engineer | Azure | Databricks | AI</h2>
+    <p>
+      Passionate Data Engineer specializing in scalable data pipelines,
+      cloud architectures, and AI-powered analytics solutions.
+      Experienced in Azure Data Factory, Databricks, Spark, and Python.
+    </p>
+    <a href="#contact" class="btn">Contact Me</a>
   </div>
+</div>
 
+<section>
+  <h2>Skills</h2>
   <div class="card">
-    <h3>AI-Powered Analytics with Spark</h3>
-    <p>Leveraging Spark for machine learning and real-time insights.</p>
+    Azure Data Factory | Azure Databricks | PySpark | SQL  
+    Python | Data Warehousing | ETL | Big Data | AI
   </div>
 </section>
 
 <section>
   <h2>Projects</h2>
   <div class="card">
-    <h3>Customer Churn Prediction</h3>
-    <p>Machine learning model deployed on Azure ML.</p>
-  </div>
-
-  <div class="card">
-    <h3>Real-Time Data Lake Architecture</h3>
-    <p>Implemented streaming pipelines using Databricks.</p>
+    <h3>Enterprise Data Pipeline</h3>
+    <p>Built scalable ETL pipelines using Azure Data Factory and Databricks.</p>
   </div>
 </section>
 
-<footer>
+<footer id="contact">
+  <p>Email: your-email@example.com</p>
   <p>© 2024 Gouri Mahapatra</p>
 </footer>
 
