--- a/index.html
+++ b/index.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Gouri Mahapatra | Data Engineer</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Gouri Mahapatra | Data Engineer</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="hero">
-  <div class="hero-content">
-    <img src="your-photo.jpg" alt="Profile Photo" class="profile">
-    <h1>Gouri Mahapatra</h1>
-    <h2>Data Engineer | Azure | Databricks | AI</h2>
-    <p>
-      Passionate Data Engineer specializing in scalable data pipelines,
-      cloud architectures, and AI-powered analytics solutions.
-      Experienced in Azure Data Factory, Databricks, Spark, and Python.
-    </p>
-    <a href="#contact" class="btn">Contact Me</a>
+<header>
+  <div class="container">
+    <div class="profile-section">
+      <img src="your-photo.jpg" alt="Profile Photo">
+      <div>
+        <h1>Gouri Mahapatra</h1>
+        <h3>Senior Data Engineer | Azure | Databricks | AI</h3>
+        <p>
+          Enterprise-focused Data Engineer specializing in scalable cloud
+          architectures, secure data pipelines, and AI-driven analytics solutions.
+        </p>
+        <a href="#contact" class="btn">Contact Me</a>
+      </div>
+    </div>
   </div>
-</div>
+</header>
 
 <section>
-  <h2>Skills</h2>
-  <div class="card">
-    Azure Data Factory | Azure Databricks | PySpark | SQL  
-    Python | Data Warehousing | ETL | Big Data | AI
+  <div class="container">
+    <h2>Core Competencies</h2>
+    <div class="grid">
+      <div class="card">Azure Data Factory</div>
+      <div class="card">Azure Databricks</div>
+      <div class="card">PySpark & Spark</div>
+      <div class="card">SQL & Data Warehousing</div>
+      <div class="card">ETL & Data Pipelines</div>
+      <div class="card">Cloud Architecture</div>
+    </div>
   </div>
 </section>
 
-<section>
-  <h2>Projects</h2>
-  <div class="card">
-    <h3>Enterprise Data Pipeline</h3>
-    <p>Built scalable ETL pipelines using Azure Data Factory and Databricks.</p>
+<section class="alt">
+  <div class="container">
+    <h2>Enterprise Projects</h2>
+
+    <div class="project">
+      <h3>Enterprise Data Lake Implementation</h3>
+      <p>Designed and deployed scalable Azure Data Lake architecture for enterprise analytics and reporting.</p>
+    </div>
+
+    <div class="project">
+      <h3>Real-Time Streaming Platform</h3>
+      <p>Built streaming pipelines using Databricks and Spark for high-volume data ingestion.</p>
+    </div>
+
   </div>
 </section>
 
 <footer id="contact">
-  <p>Email: your-email@example.com</p>
-  <p>© 2024 Gouri Mahapatra</p>
+  <div class="container">
+    <h2>Contact</h2>
+    <p>Email: your-email@example.com</p>
+    <p>LinkedIn: linkedin.com/in/yourprofile</p>
+    <p>© 2024 Gouri Mahapatra</p>
+  </div>
 </footer>
 
 </body>
