--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Gouri Mahapatra | Data Engineer</title>
+<title>Gouri Prasad Mahapatra | Data Engineer</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<canvas id="trail"></canvas>
+
 <header>
   <div class="container">
     <div class="profile-section">
-      <img src="your-photo.jpg" alt="Profile Photo">
+      <img src="profile.jpg" alt="Profile Photo" class="profile">
       <div>
-        <h1>Gouri Mahapatra</h1>
+        <h1>Gouri Prasad Mahapatra</h1>
         <h3>Senior Data Engineer | Azure | Databricks | AI</h3>
         <p>
-          Enterprise-focused Data Engineer specializing in scalable cloud
-          architectures, secure data pipelines, and AI-driven analytics solutions.
+          Enterprise Data Engineer focused on scalable cloud architectures,
+          secure ETL pipelines, and AI-driven analytics solutions.
         </p>
         <a href="#contact" class="btn">Contact Me</a>
       </div>
@@ -26,43 +28,25 @@
 
 <section>
   <div class="container">
-    <h2>Core Competencies</h2>
+    <h2>Core Expertise</h2>
     <div class="grid">
       <div class="card">Azure Data Factory</div>
       <div class="card">Azure Databricks</div>
-      <div class="card">PySpark & Spark</div>
-      <div class="card">SQL & Data Warehousing</div>
-      <div class="card">ETL & Data Pipelines</div>
+      <div class="card">PySpark</div>
+      <div class="card">SQL & Warehousing</div>
+      <div class="card">ETL Pipelines</div>
       <div class="card">Cloud Architecture</div>
     </div>
   </div>
 </section>
 
-<section class="alt">
-  <div class="container">
-    <h2>Enterprise Projects</h2>
-
-    <div class="project">
-      <h3>Enterprise Data Lake Implementation</h3>
-      <p>Designed and deployed scalable Azure Data Lake architecture for enterprise analytics and reporting.</p>
-    </div>
-
-    <div class="project">
-      <h3>Real-Time Streaming Platform</h3>
-      <p>Built streaming pipelines using Databricks and Spark for high-volume data ingestion.</p>
-    </div>
-
-  </div>
-</section>
-
 <footer id="contact">
   <div class="container">
-    <h2>Contact</h2>
     <p>Email: your-email@example.com</p>
-    <p>LinkedIn: linkedin.com/in/yourprofile</p>
-    <p>© 2024 Gouri Mahapatra</p>
+    <p>© 2024 Gouri Prasad Mahapatra</p>
   </div>
 </footer>
 
+<script src="trail.js"></script>
 </body>
 </html>
