--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
   <div class="container">
     <div class="profile-section">
-      <img src="profile.jpg" alt="Profile Photo" class="profile">
+      <img src="IMG_7433.jpg" alt="Profile Photo" class="profile">
       <div>
         <h1>Gouri Prasad Mahapatra</h1>
         <h3>Senior Data Engineer | Azure | Databricks | AI</h3>
