--- a/index.html
+++ b/index.html
@@ -1,52 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Gouri Prasad Mahapatra | Data Engineer</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
+<section class="linkedin-profile">
 
-<canvas id="trail"></canvas>
+  <div class="profile-card">
 
-<header>
-  <div class="container">
-    <div class="profile-section">
-      <img src="IMG_7433.jpg" alt="Profile Photo" class="profile">
-      <div>
-        <h1>Gouri Prasad Mahapatra</h1>
-        <h3>Senior Data Engineer | Azure | Databricks | AI</h3>
-        <p>
-          Enterprise Data Engineer focused on scalable cloud architectures,
-          secure ETL pipelines, and AI-driven analytics solutions.
-        </p>
-        <a href="#contact" class="btn">Contact Me</a>
+    <div class="profile-header">
+      <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+      <div class="profile-info">
+        <h1>Gouri Mahapatra</h1>
+        <h3>Big Data Architect | Azure & AWS | AI & Data Engineering</h3>
+        <p>Nekozane, Japan • 18+ Years Experience</p>
       </div>
     </div>
-  </div>
-</header>
 
-<section>
-  <div class="container">
-    <h2>Core Expertise</h2>
-    <div class="grid">
-      <div class="card">Azure Data Factory</div>
-      <div class="card">Azure Databricks</div>
-      <div class="card">PySpark</div>
-      <div class="card">SQL & Warehousing</div>
-      <div class="card">ETL Pipelines</div>
-      <div class="card">Cloud Architecture</div>
+    <div class="profile-summary">
+      <h2>About</h2>
+      <p>
+        Experienced Big Data Architect with expertise in Data Integration, 
+        Cloud Migration, AI Solutions, and Enterprise Data Platforms.
+        Passionate about building scalable Azure & AWS data architectures.
+      </p>
     </div>
+
+    <div class="profile-skills">
+      <h2>Skills</h2>
+      <div class="skills-container">
+        <span>Azure</span>
+        <span>AWS</span>
+        <span>Databricks</span>
+        <span>PySpark</span>
+        <span>SQL</span>
+        <span>AI Architecture</span>
+        <span>Data Engineering</span>
+      </div>
+    </div>
+
+    <div class="profile-links">
+      <a href="https://www.linkedin.com/in/YOUR_LINK" target="_blank">LinkedIn</a>
+      <a href="https://github.com/gourimahapatra-ai" target="_blank">GitHub</a>
+      <a href="mailto:yourmail@email.com">Email</a>
+    </div>
+
   </div>
+
 </section>
-
-<footer id="contact">
-  <div class="container">
-    <p>Email: your-email@example.com</p>
-    <p>© 2024 Gouri Prasad Mahapatra</p>
-  </div>
-</footer>
-
-<script src="trail.js"></script>
-</body>
-</html>
