--- a/index.html
+++ b/index.html
@@ -1,44 +1,75 @@
-<section class="linkedin-profile">
+<!-- Banner -->
+<p align="center">
+  <img src="https://raw.githubusercontent.com/<your-username>/<your-username>/main/banner.png" width="100%" />
+</p>
 
-  <div class="profile-card">
+<h1 align="center">🌿 Gouri Mahapatra</h1>
+<h3 align="center">Big Data Architect | Cloud & AI Solutions Leader</h3>
 
-    <div class="profile-header">
-      <img src="profile.jpg" alt="Profile Photo" class="profile-img">
-      <div class="profile-info">
-        <h1>Gouri Mahapatra</h1>
-        <h3>Big Data Architect | Azure & AWS | AI & Data Engineering</h3>
-        <p>Nekozane, Japan • 18+ Years Experience</p>
-      </div>
-    </div>
+<p align="center">
+Designing scalable, sustainable, and intelligent data platforms across AWS & Azure.
+</p>
 
-    <div class="profile-summary">
-      <h2>About</h2>
-      <p>
-        Experienced Big Data Architect with expertise in Data Integration, 
-        Cloud Migration, AI Solutions, and Enterprise Data Platforms.
-        Passionate about building scalable Azure & AWS data architectures.
-      </p>
-    </div>
+---
 
-    <div class="profile-skills">
-      <h2>Skills</h2>
-      <div class="skills-container">
-        <span>Azure</span>
-        <span>AWS</span>
-        <span>Databricks</span>
-        <span>PySpark</span>
-        <span>SQL</span>
-        <span>AI Architecture</span>
-        <span>Data Engineering</span>
-      </div>
-    </div>
+## 👋 About Me
 
-    <div class="profile-links">
-      <a href="https://www.linkedin.com/in/YOUR_LINK" target="_blank">LinkedIn</a>
-      <a href="https://github.com/gourimahapatra-ai" target="_blank">GitHub</a>
-      <a href="mailto:yourmail@email.com">Email</a>
-    </div>
+🔹 18+ Years of IT Experience  
+🔹 Big Data Architecture & Cloud Modernization  
+🔹 Azure | AWS | PySpark | SQL  
+🔹 Sustainability & Green Data Platforms  
 
-  </div>
+I specialize in designing enterprise-grade data platforms, leading cloud migrations, and building AI-powered intelligent systems.
 
-</section>
+---
+
+## 🚀 Core Expertise
+
+| Domain | Technologies |
+|--------|-------------|
+| ☁️ Cloud | Azure, AWS, Migration Architecture |
+| 📊 Data Engineering | PySpark, SQL, ETL, Data Modeling |
+| 🏗 Architecture | Data Lakes, Medallion Architecture |
+| 🤖 AI | Azure AI, Document Intelligence |
+| 🌱 Sustainability | Carbon-Aware Data Systems |
+
+---
+
+## 📁 Featured Projects
+
+### 🔹 Customer 360 Platform
+Enterprise unified customer data system integrating multi-source ingestion for analytics and personalization.
+
+### 🔹 Azure Migration Program
+Led legacy-to-cloud transformation with performance optimization and cost governance.
+
+### 🔹 Intelligent Document Validation
+AI-driven document verification and compliance automation system.
+
+---
+
+## 🏆 Certifications & Learning
+
+- Microsoft Azure AI-900 (In Progress)
+- Advanced SQL Certification
+- Cloud Architecture Best Practices
+
+---
+
+## 🌱 Vision
+
+> "Technology should not only scale businesses — it should scale responsibly."
+
+---
+
+## 📫 Connect With Me
+
+- 💼 LinkedIn: [Add Your Link]
+- 📧 Email: gouri-prasad.Mahapatra@capgemini.com
+- 🐙 GitHub: https://github.com/<your-username>
+
+---
+
+<p align="center">
+⚡ Building Intelligent • Scalable • Sustainable Data Systems ⚡
+</p>
