--- a/index.html
+++ b/index.html
@@ -1,75 +1,147 @@
-<!-- Banner -->
-<p align="center">
-  <img src="https://raw.githubusercontent.com/<your-username>/<your-username>/main/banner.png" width="100%" />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gouri Mahapatra | Workfolio</title>
 
-<h1 align="center">🌿 Gouri Mahapatra</h1>
-<h3 align="center">Big Data Architect | Cloud & AI Solutions Leader</h3>
+<style>
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    background: #0f0f0f;
+    color: #e6e6e6;
+    line-height: 1.6;
+}
 
-<p align="center">
-Designing scalable, sustainable, and intelligent data platforms across AWS & Azure.
-</p>
+.hero {
+    background: linear-gradient(135deg, #000000 0%, #001a00 100%);
+    padding: 100px 20px;
+    text-align: center;
+}
 
----
+.hero h1 {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
 
-## 👋 About Me
+.hero h3 {
+    font-weight: 400;
+    color: #00ff88;
+}
 
-🔹 18+ Years of IT Experience  
-🔹 Big Data Architecture & Cloud Modernization  
-🔹 Azure | AWS | PySpark | SQL  
-🔹 Sustainability & Green Data Platforms  
+.section {
+    max-width: 900px;
+    margin: auto;
+    padding: 60px 20px;
+}
 
-I specialize in designing enterprise-grade data platforms, leading cloud migrations, and building AI-powered intelligent systems.
+h2 {
+    border-bottom: 1px solid #222;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    color: #00ff88;
+}
 
----
+.card {
+    background: #161616;
+    padding: 25px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    transition: 0.3s;
+}
 
-## 🚀 Core Expertise
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 30px rgba(0,255,136,0.15);
+}
 
-| Domain | Technologies |
-|--------|-------------|
-| ☁️ Cloud | Azure, AWS, Migration Architecture |
-| 📊 Data Engineering | PySpark, SQL, ETL, Data Modeling |
-| 🏗 Architecture | Data Lakes, Medallion Architecture |
-| 🤖 AI | Azure AI, Document Intelligence |
-| 🌱 Sustainability | Carbon-Aware Data Systems |
+.skills span {
+    display: inline-block;
+    background: #00ff88;
+    color: #000;
+    padding: 6px 12px;
+    border-radius: 20px;
+    margin: 5px 5px 0 0;
+    font-size: 14px;
+}
 
----
+.footer {
+    text-align: center;
+    padding: 40px;
+    border-top: 1px solid #222;
+    color: #777;
+}
 
-## 📁 Featured Projects
+a {
+    color: #00ff88;
+    text-decoration: none;
+}
+</style>
+</head>
 
-### 🔹 Customer 360 Platform
-Enterprise unified customer data system integrating multi-source ingestion for analytics and personalization.
+<body>
 
-### 🔹 Azure Migration Program
-Led legacy-to-cloud transformation with performance optimization and cost governance.
+<div class="hero">
+    <h1>Gouri Mahapatra</h1>
+    <h3>Big Data Architect | Cloud & AI Solutions Leader</h3>
+    <p>Designing scalable, sustainable & intelligent data platforms</p>
+</div>
 
-### 🔹 Intelligent Document Validation
-AI-driven document verification and compliance automation system.
+<div class="section">
+    <h2>About Me</h2>
+    <p>
+        Big Data Architect with 18+ years of IT experience specializing in
+        data integration, cloud modernization, and AI-driven enterprise solutions.
+        Passionate about building sustainable and scalable data ecosystems across Azure & AWS.
+    </p>
+</div>
 
----
+<div class="section">
+    <h2>Core Expertise</h2>
+    <div class="skills">
+        <span>Azure</span>
+        <span>AWS</span>
+        <span>PySpark</span>
+        <span>SQL</span>
+        <span>Data Architecture</span>
+        <span>AI Solutions</span>
+        <span>Sustainability Tech</span>
+    </div>
+</div>
 
-## 🏆 Certifications & Learning
+<div class="section">
+    <h2>Featured Projects</h2>
 
-- Microsoft Azure AI-900 (In Progress)
-- Advanced SQL Certification
-- Cloud Architecture Best Practices
+    <div class="card">
+        <h3>Customer 360 Platform</h3>
+        <p>Unified enterprise customer data system integrating multi-source ingestion for analytics and personalization.</p>
+    </div>
 
----
+    <div class="card">
+        <h3>Azure Migration Program</h3>
+        <p>Led enterprise migration from legacy systems to Azure cloud with performance and cost optimization.</p>
+    </div>
 
-## 🌱 Vision
+    <div class="card">
+        <h3>Intelligent Document Validation</h3>
+        <p>AI-driven automated document verification and compliance system using Azure AI.</p>
+    </div>
 
-> "Technology should not only scale businesses — it should scale responsibly."
+</div>
 
----
+<div class="section">
+    <h2>Contact</h2>
+    <p>
+        📧 gouri-prasad.Mahapatra@capgemini.com <br>
+        💼 <a href="#">LinkedIn</a> <br>
+        🐙 <a href="#">GitHub</a>
+    </p>
+</div>
 
-## 📫 Connect With Me
+<div class="footer">
+    ⚡ Building Intelligent • Scalable • Sustainable Data Systems ⚡
+</div>
 
-- 💼 LinkedIn: [Add Your Link]
-- 📧 Email: gouri-prasad.Mahapatra@capgemini.com
-- 🐙 GitHub: https://github.com/<your-username>
-
----
-
-<p align="center">
-⚡ Building Intelligent • Scalable • Sustainable Data Systems ⚡
-</p>
+</body>
+</html>
